style.css
html, body{
    margin:0;
    padding:0;
    height: 100%;

    display: flex; /*This is flexbox for the entire web page, (needed to extend the body to the bottom)*/
    flex-direction: column;  /*Items in this flexbox are stcked up to down*/

    /*this removes all the scroll bars, more like an app*/
    -ms-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    /*default font for entire page*/
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;

    user-select: none;  /*Makes the text un-highlightable for entire page */

    background-color: rgb(240, 244, 248);
}

/*placeholder text color*/
::placeholder {
    color: rgb(130, 117, 104);;
    opacity: 1; /* Firefox */
}
::-ms-input-placeholder { /* Edge 12 -18 */
    color:rgb(130, 117, 104);
}

/********************** Login Portion **********************/
h1{
    font-weight: 500;
    border: blue 1px solid;
}
p{
    margin:auto;
}
#login-title{
    margin: auto;
}
#loginCard{
    width: 300px;
    height: 300px;
    background-color: rgb(255, 255, 255);
    margin: auto;
    padding: 20px;
    border-radius: 2%;
    /*display:flex;*/
    display:none;
    flex-direction: column;
}
/*Hidden sign up button*/
#sign-up{
    display:none;
}
#password2{
    display:none;
}
#cancel-create-account{
    display:none;
}

/****************** To DO List Portion *********************/
#navbar-area{
    /*display:none;*/
    display:flex;  /*The entire navbar is a flexbox container*/
    height: 53px; /*height of navbar is 53px (This height is fixed)*/
    flex-direction: row; /*items in this flexbox are stacked left ot right*/
    flex-wrap: nowrap; /*Make sure no wrapping occurs*/
    background-color: rgb(213, 176, 150);
    border-bottom: solid 1px rgb(217, 217, 217);
}

/*2 sections are sidebar and main area*/
.two-section{
    display:flex;
    flex-direction: row;
    flex-wrap: nowrap;
    flex-grow:1;
    justify-content: flex-start;
}

#sidebar{
    display:flex;
    flex-direction: column;
    flex-wrap:nowrap;
    background-color:rgb(236, 229, 218 );
    gap: 30px;
    padding-top: 50px;
    width: 105px; /*width of sidebar is compact mode*/
    transition: all 0.5s ease;
    /*border: red solid 1px;*/
}
#name{
    display: none;
}
#sidebar a{
    margin-left:30px;
    margin-right:30px;
    color: black;
    color:rgb(80, 69, 58);
    background-color: rgba(213, 232, 202, 0);
    padding:8px 10px;
    border-radius: 100px;
    transition: all 0.3s ease; /*transition for color change on hover*/
    display:flex;
    flex-direction: row;
    text-decoration: none;
}
#sidebar a.active{
    background-color: rgb(213, 232, 202);
    color: black;
    & .material-symbols-outlined{
        font-variation-settings:
        'FILL' 1,
        'wght' 400,
        'GRAD' 0,
        'opsz' 24
    }
}
#sidebar a:hover{
    background-color: rgb(185, 201, 176);
    transform: scale(1.01);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
    & .material-symbols-outlined{
        font-variation-settings:
        'FILL' 1,
        'wght' 400,
        'GRAD' 0,
        'opsz' 24
    }
}

#sidebar.active{
    width:300px;
    & #name{
        display:block;
    }
}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 24
}


#mainarea{    
    display:flex; /*estblish that this container uses flexbox*/
    flex-direction: column; /*items are layout in row direction*/
    flex-wrap: nowrap; /*all items will appear on one line (no wrapping)*/
    background-color: rgb(237, 239, 229);
    background-color:rgb(236, 229, 218 );
    width:100%; /*take up 9 values of width*/
    
    /*border: blue 1px solid;*/
}



.inputArea{
    margin-left: 0px;
    margin-right: 25px;
    padding-top:40px;
    padding-bottom: 20px;
    display:flex;
    justify-content: flex-start;
    gap:10px; /*the gap betwwen the input and button*/
    height: 45px;
    /*border: solid red 1px;*/
}
#input-field{
    font-family: "Roboto", sans-serif; /*input fields need this to take effect*/
    font-size: 14px;
    text-align:center;
    border:0; /*remove the outline around input field*/
    border-radius:30px;
    width:50%;
    padding: 25px;
    background-color:rgb(252, 252, 252);
}
#add-button{
    font-family: "Roboto", sans-serif; /*input fields need this to take effect*/
    font-size: 13px;
    text-align:center;
    border:0; /*remove the outline around button*/
    border-radius: 30px;
    width:90px;
    padding:15px;
    background-color: rgb(255, 220, 173);
    transition: all 0.3s ease;
}
#add-button:hover{
    cursor: pointer;
    background-color: rgb(246, 208, 162);
    transform: scale(1.01);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}
#add-button:active{
    background-color:rgb(227, 193, 150);
    transform:scale(1);
}




.TaskArea{
    height:100%;
    margin-left:0px;
    margin-right:25px;
    margin-bottom: 20px;
    background-color: rgb(252, 252, 252);
    border-radius: 15px;
    overflow: hidden;
    /*border: rgb(250, 43, 253) 1px solid;*/
}
.task-header{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: rgb(243, 245, 235);
    background-color: rgb(246, 244, 239);
    height:70px;
}
.leftTitleArea{
    display:flex;
    flex-direction: column;
    padding: 15px;
    /*border: red 1px solid;*/
}
.rightTitleArea{
    /*border: rgb(119, 255, 0) 1px solid;*/
}


.title{
    font-weight: 400;
    font-size: 18px;
    padding-top:4px;
    padding-bottom: 6px;
}
#dateArea{
    font-size: 12px;
}
#taskCountArea{
    font-size: 12px;
    color: rgb(130, 117, 104);
}

#removeAll-button{
    margin-top: 15px;
    margin-right:14px;
    padding-top:10px;
    padding-bottom:7px;
    padding-left:12px;
    padding-right:12px;
    background-color: rgb(252, 252, 252);
    color: rgb(130, 117, 104);
    border-radius: 14px;
    scale: 0.8;
    border:none;
    cursor: pointer;
    transition: all 0.3s ease;
}
#removeAll-button:hover{
    background-color: rgb(246, 208, 162);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}
#removeAll-button:active{
    background-color:rgb(227, 193, 150);
}

#deleteListOverlay{
    position:fixed;
    display:none; /*Hidden by default*/
    width: 100%;
    height:100%;
    top:0;
    left:0;
    right:0;
    bottom:0;
    background-color:rgba(0,0,0,0.5); 
    z-index:2;
}
#deleteAllCard{
    max-width:280px;
    max-height:200px;
    background-color:rgb(252, 252, 252);
    border-radius: 20px;
    

    position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;

    margin:auto;
    z-index:3;
}
.Overlay-icon{
    margin-top: 18px;
    text-align: center;
    scale:0.85;
    color: rgb(130, 117, 104);
}
#Overlay-title{
    /*border: red 1px solid;*/
    text-align: center;
    font-size: 19px;
    font-weight: 400;
    margin-top:13px;
}
#Overlay-text{
    margin-top:15px;
    margin-left:25px;
    margin-right:25px;
    margin-bottom:35px;
    font-size: 12px;
    font-weight:300;
}
.Overlay-buttons{
    display:flex;
    flex-direction:row;
    justify-content: flex-end;
    gap:12px;
    /*border:red 1px solid;*/
    margin-right:20px;
    
}
.Overlay-btn{
    border: none;
    font-size: 12px;
    padding: 10px 19px;
    border-radius:20px;
    background-color:rgb(252, 252, 252);
    color: rgb(130, 117, 104);

}
.Overlay-btn:hover{
    background-color: rgb(246, 208, 162);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
    cursor: pointer;
}

.Overlay-btn:active{
    background-color:rgb(227, 193, 150);
}
#Delete-btn{
    background-color: rgb(255, 226, 188);
}
#Delete-btn:hover{
    background-color: rgb(246, 208, 162);
}
#Delete-btn:active{
    background-color:rgb(227, 193, 150);
}



ul{
    list-style-type: none;  /*Removes the dot at begining of a task*/
    display:flex; /*list of tasks will use flexbox*/
    flex-wrap: wrap; /*makes sure the flexbox elements will wrap*/
    justify-content: center;
    gap: 20px; /*gap between each task element*/
    padding-left:0; /*Needed because a list will create an unessesary space on the left*/
    /*border: solid red 1px;*/
}
ul li{
    background-color: rgb(255, 255, 255);  /*color of a task element*/
    background-color: rgb(242, 239, 232);
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2); /*shadow around a task element*/
    padding: 15px;  /*padding inside a task element*/
    border-radius: 8px; /*radius of a task element*/
    height: 20px; /*height of a task element*/
    width:100%;
    margin-left:20px;
    margin-right:20px;
    /*min-width: 100px; /*minumum width of a task element*/
    flex-grow:1; /*makes each task fill any remainding space beside*/
    text-align: left; /*align text to center of task*/

    /*this three needed to keep one line and end in ellipsis*/
    white-space: nowrap; /*keeps text limited to one line*/
    overflow:hidden; /*make sure line does not go outside the div*/
    text-overflow: ellipsis; /*ends the line in ellipses*/
    transition: all 0.3s ease;
}
ul li:hover{
    cursor: pointer;
    background-color: rgb(232, 229, 222);
    background-color: rgb(255, 221, 178);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

.user-details-container{
    background-color: rgb(227, 187, 187);
}

